Bug 410519 - Incorrect icon in toolbar for adding interfaces to component diagram
Summary: Incorrect icon in toolbar for adding interfaces to component diagram
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-02 15:20 UTC by Ralf Habacker
Modified: 2019-08-03 17:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.80 (KDE Applications 19.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-08-02 15:20:54 UTC
The symbol in the toolbar for adding interfaces to component diagrams does not correspond to the representation of interfaces in component diagrams.

STEPS TO REPRODUCE
1. start umbrello
2. add component diagram

OBSERVED RESULT
The icon for adding interfaces is incorrect

EXPECTED RESULT
There should be displayed the correct icon
Comment 1 Ralf Habacker 2019-08-02 23:09:07 UTC
Git commit e652a54d522411e6dda227dce96948cb3747e870 by Ralf Habacker.
Committed on 02/08/2019 at 23:04.
Pushed by habacker into branch 'master'.

Fix 'Incorrect icon in toolbar for adding interfaces to component diagram'
FIXED-IN:2.29.80 (KDE Applications 19.11.80)

M  +1    -0    umbrello/icon_utils.cpp
M  +1    -0    umbrello/icon_utils.h
M  +2    -0    umbrello/pics/CMakeLists.txt
A  +-    --    umbrello/pics/cursor-interface-provider.png
A  +-    --    umbrello/pics/interface-provider.png
A  +139  -0    umbrello/pics/sources/interface-provider.svg
M  +3    -1    umbrello/worktoolbar.cpp
M  +2    -0    umbrello/worktoolbar.h

https://commits.kde.org/umbrello/e652a54d522411e6dda227dce96948cb3747e870
Comment 2 Ralf Habacker 2019-08-03 17:05:38 UTC
Git commit f681bb924ad21ea70463027d6620a26c514cda56 by Ralf Habacker.
Committed on 03/08/2019 at 10:54.
Pushed by habacker into branch 'master'.

Fixup of interface work toolbar button support

M  +2    -0    umbrello/icons.qrc
M  +3    -0    umbrello/toolbarstateother.cpp
M  +1    -1    umbrello/worktoolbar.cpp

https://commits.kde.org/umbrello/f681bb924ad21ea70463027d6620a26c514cda56