Fix 'Incorrect icon in toolbar for adding interfaces to component diagram'

BUG:410519
FIXED-IN:2.29.80 (KDE Applications 19.11.80)